tests/fixtures/invalid/int_div_bytes.py
# Cannot divide Int by Bytes
x: float = 1 / b"hello"
